--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="app_name">MyQuiz</string>
     <string name="action_settings">Settings</string>
     <string name="question_text">Constantinople is the largest city in Turkey.</string>
-
     <string name="true_button">True</string>
     <string name="false_button">False</string>
     <string name="next_button">Next</string>
@@ -26,5 +25,7 @@
     <string name="show_answer_button">Show Answer</string>
     <string name="judgement_toast">Cheating is wrong.</string>
     <string name="incorrect_judgement_toast">You do not cheat very well. \nStick to guessing.</string>
+    <string name="title_activity_cheat">CheatActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
